--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-19T16:42:27Z</date>
+						<date>2018-05-22T14:13:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -342,11 +342,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								369o/i7WkfyY
-								hdMYAzOd1g==
+								jPswpinNXWgW
+								MAAL1narlw==
 								</data>
 								<key>Size</key>
-								<integer>147177</integer>
+								<integer>147496</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -372,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FkJl9NMvupnY
-								v3X1vWg0Bg==
+								SOKD95nEkZuJ
+								9VC/n/QHqg==
 								</data>
 								<key>Size</key>
-								<integer>94293</integer>
+								<integer>94718</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
