--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,11 +33,21 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-21T20:45:09Z</date>
+						<date>2018-05-22T14:13:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
+							<key>files/backgroundImage_109802.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								QETP738VfUvU
+								/jzCm7P3tw==
+								</data>
+								<key>Size</key>
+								<integer>41544</integer>
+							</dict>
 							<key>files/small_109886.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -282,11 +292,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AeHb7sYXQJ/v
-								Mz59+5gdAw==
+								LpOeZR6ponbH
+								4M0pbGPl9A==
 								</data>
 								<key>Size</key>
-								<integer>116896</integer>
+								<integer>117074</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
