--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-19T16:42:27Z</date>
+						<date>2018-05-22T14:13:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -348,6 +348,16 @@
 								<key>Size</key>
 								<integer>92085</integer>
 							</dict>
+							<key>files/stacks-image-f0a1e8a-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Th4ZQ3m162Hz
+								RpEAXGMHWw==
+								</data>
+								<key>Size</key>
+								<integer>90979</integer>
+							</dict>
 							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
 								<key>Digest</key>
@@ -362,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								yKWS8xAS+wwg
-								zwMY9DpTNg==
+								51O42Fw03vRJ
+								L+SSNlx3iA==
 								</data>
 								<key>Size</key>
-								<integer>144826</integer>
+								<integer>148157</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -392,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NkIbaNBsov6Y
-								PnfeDW0uSA==
+								u5xW0Z2fKicw
+								t1xLEsOtIQ==
 								</data>
 								<key>Size</key>
-								<integer>99313</integer>
+								<integer>103504</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
