--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-19T16:42:27Z</date>
+						<date>2018-05-22T14:13:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -218,15 +218,15 @@
 								<key>Size</key>
 								<integer>353790</integer>
 							</dict>
-							<key>files/stacks-image-faf7292-250x374.png</key>
+							<key>files/stacks-image-c9f8f3e-300x168.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								NNBt6Bo0YD+W
-								OAAFcd+YGA==
+								tPrKTkeRLB3f
+								sDvisoqn9A==
 								</data>
 								<key>Size</key>
-								<integer>97449</integer>
+								<integer>36650</integer>
 							</dict>
 							<key>files/stacks-image-fedaa0e-261x251.png</key>
 							<dict>
@@ -242,11 +242,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								txpy4UEFBDB4
-								ZufXpxprug==
+								VWDniOlzjd6u
+								AIUpg/9WAw==
 								</data>
 								<key>Size</key>
-								<integer>116829</integer>
+								<integer>114564</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nWOZ3/46yifK
-								6pHB19nd+Q==
+								wmYMUUXxbzXp
+								QHiajNDiuA==
 								</data>
 								<key>Size</key>
-								<integer>56210</integer>
+								<integer>55903</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
