--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3111,7 +3111,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-22T14:13:16Z</date>
+						<date>2018-05-22T21:54:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3390,11 +3390,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								csMfEmAtBncA
-								ovScjiz7yA==
+								IFEAtTg8zAkL
+								LWIraT4w8Q==
 								</data>
 								<key>Size</key>
-								<integer>55209</integer>
+								<integer>55494</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5047,7 +5047,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-22T14:13:16Z</date>
+						<date>2018-05-22T21:54:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5456,11 +5456,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KXmvDePBSA8H
-								FdSNbz0okQ==
+								b07N8i/5JT1E
+								inpmhB6hUg==
 								</data>
 								<key>Size</key>
-								<integer>98298</integer>
+								<integer>99553</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
