--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-22T14:13:16Z</date>
+						<date>2018-05-22T21:54:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -312,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								csMfEmAtBncA
-								ovScjiz7yA==
+								IFEAtTg8zAkL
+								LWIraT4w8Q==
 								</data>
 								<key>Size</key>
-								<integer>55209</integer>
+								<integer>55494</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
