CME and description update
CME and description update

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2579,7 +2579,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-22T14:13:16Z</date>
+						<date>2018-05-22T22:31:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2848,11 +2848,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wH01Id6OtQDK
-								IP2WLO0hxA==
+								hNeTfXrW0ypl
+								lLQ2q0hxnw==
 								</data>
 								<key>Size</key>
-								<integer>62526</integer>
+								<integer>62602</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
