corrections on CNWW page
corrections on CNWW page

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-22T21:54:05Z</date>
+						<date>2018-05-23T12:56:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -442,11 +442,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								b07N8i/5JT1E
-								inpmhB6hUg==
+								pPZRxs3id7ey
+								GPt9/QNKaQ==
 								</data>
 								<key>Size</key>
-								<integer>99553</integer>
+								<integer>99617</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
