--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3111,7 +3111,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-22T21:54:05Z</date>
+						<date>2018-05-23T12:56:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3390,11 +3390,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IFEAtTg8zAkL
-								LWIraT4w8Q==
+								4tVPxYyQ71Gz
+								tWl2T6qEiA==
 								</data>
 								<key>Size</key>
-								<integer>55494</integer>
+								<integer>55558</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5047,7 +5047,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-22T21:54:05Z</date>
+						<date>2018-05-23T12:56:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5456,11 +5456,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								b07N8i/5JT1E
-								inpmhB6hUg==
+								pPZRxs3id7ey
+								GPt9/QNKaQ==
 								</data>
 								<key>Size</key>
-								<integer>99553</integer>
+								<integer>99617</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
