--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5047,7 +5047,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-23T12:56:06Z</date>
+						<date>2018-05-23T13:02:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5456,11 +5456,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pPZRxs3id7ey
-								GPt9/QNKaQ==
+								dowbcQhcPc64
+								7Iol98mbOQ==
 								</data>
 								<key>Size</key>
-								<integer>99617</integer>
+								<integer>99514</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
