--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3111,7 +3111,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-23T12:56:06Z</date>
+						<date>2018-05-23T13:24:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3390,11 +3390,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4tVPxYyQ71Gz
-								tWl2T6qEiA==
+								7m8IgV21CIrK
+								5Tx79+a1yA==
 								</data>
 								<key>Size</key>
-								<integer>55558</integer>
+								<integer>55516</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
