--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-23T13:02:29Z</date>
+						<date>2018-05-23T13:54:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -442,11 +442,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dowbcQhcPc64
-								7Iol98mbOQ==
+								Xayw4EmXjBvO
+								NZFRLWjOcw==
 								</data>
 								<key>Size</key>
-								<integer>99514</integer>
+								<integer>99495</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
