--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-23T13:24:20Z</date>
+						<date>2018-05-23T13:54:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -312,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7m8IgV21CIrK
-								5Tx79+a1yA==
+								6kSaSf31ulkM
+								a8+XmeOckQ==
 								</data>
 								<key>Size</key>
-								<integer>55516</integer>
+								<integer>55497</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
