Published CNWW changes
Published CNWW changes

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3111,7 +3111,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-23T13:54:51Z</date>
+						<date>2018-05-25T15:57:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3390,11 +3390,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6kSaSf31ulkM
-								a8+XmeOckQ==
+								4UeK/7LC98II
+								1uPLjh0UTg==
 								</data>
 								<key>Size</key>
-								<integer>55497</integer>
+								<integer>55496</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5047,7 +5047,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-23T13:54:51Z</date>
+						<date>2018-05-25T15:57:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5456,11 +5456,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Xayw4EmXjBvO
-								NZFRLWjOcw==
+								ELYY1RP6bTPk
+								k3ehPKAg6g==
 								</data>
 								<key>Size</key>
-								<integer>99495</integer>
+								<integer>99671</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
