tuition waiver info CNWW
tuition waiver info CNWW

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-25T15:57:05Z</date>
+						<date>2018-05-25T19:17:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -312,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4UeK/7LC98II
-								1uPLjh0UTg==
+								9f4rngA7T7yd
+								qLS+/E6/pg==
 								</data>
 								<key>Size</key>
-								<integer>55496</integer>
+								<integer>55648</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
