--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-25T15:57:05Z</date>
+						<date>2018-05-25T19:17:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -442,11 +442,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ELYY1RP6bTPk
-								k3ehPKAg6g==
+								x6WrjoFVz757
+								jAurVsUChg==
 								</data>
 								<key>Size</key>
-								<integer>99671</integer>
+								<integer>99823</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
