--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/ChildPages/1-NetSci-2019-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/ChildPages/1-NetSci-2019-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-28T18:52:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -88,25 +88,25 @@
 								<key>Size</key>
 								<integer>228758</integer>
 							</dict>
-							<key>files/stacks-image-b036da1.jpg</key>
+							<key>files/stacks-image-f3bb400-962x550.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								JUoHLPvYm3S6
-								H1vGSRbKVA==
+								0p0r8uyAmOgl
+								x3DHEQQQag==
 								</data>
 								<key>Size</key>
-								<integer>1061377</integer>
+								<integer>221774</integer>
 							</dict>
 							<key>files/stacks_page_page52.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								xRnH9eEVBsKS
-								sDEhenzkMA==
+								Prgd+clsHiw8
+								IkjDm3J0zQ==
 								</data>
 								<key>Size</key>
-								<integer>111001</integer>
+								<integer>111501</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								l6o523UsDrYn
-								kU4VOKFUag==
+								eQdYl9oiHakA
+								NxCieKV0wg==
 								</data>
 								<key>Size</key>
-								<integer>49473</integer>
+								<integer>49487</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
