--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-28T18:52:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -118,16 +118,6 @@
 								<key>Size</key>
 								<integer>228758</integer>
 							</dict>
-							<key>files/stacks-image-b036da1.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								JUoHLPvYm3S6
-								H1vGSRbKVA==
-								</data>
-								<key>Size</key>
-								<integer>1061377</integer>
-							</dict>
 							<key>files/stacks-image-d2c4351-196x300.png</key>
 							<dict>
 								<key>Digest</key>
@@ -147,6 +137,16 @@
 								</data>
 								<key>Size</key>
 								<integer>41169</integer>
+							</dict>
+							<key>files/stacks-image-f9435ca-962x550.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								0p0r8uyAmOgl
+								x3DHEQQQag==
+								</data>
+								<key>Size</key>
+								<integer>221774</integer>
 							</dict>
 							<key>files/stacks-image-f9ee1d8-166x250.jpg</key>
 							<dict>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EKwVaCM/ZMmD
-								KCp2XZKdhg==
+								OlsGq0xHJ9aF
+								dnzOgAI8rg==
 								</data>
 								<key>Size</key>
-								<integer>106445</integer>
+								<integer>107445</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -202,11 +202,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BloZ1n2Ju5r3
-								l9TWV1Objg==
+								SuU86o4pRFSr
+								XHzfkeRJAQ==
 								</data>
 								<key>Size</key>
-								<integer>47067</integer>
+								<integer>47086</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
