--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5665,7 +5665,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-28T18:52:03Z</date>
+						<date>2018-05-29T17:56:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5700,6 +5700,16 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
+							<key>files/stacks-image-62d32bc-962x550.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								sJ0vKgRi9nmE
+								cTfZNsELYg==
+								</data>
+								<key>Size</key>
+								<integer>220569</integer>
+							</dict>
 							<key>files/stacks-image-69ebcea.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -5719,16 +5729,6 @@
 								</data>
 								<key>Size</key>
 								<integer>228758</integer>
-							</dict>
-							<key>files/stacks-image-f3bb400-962x550.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								0p0r8uyAmOgl
-								x3DHEQQQag==
-								</data>
-								<key>Size</key>
-								<integer>221774</integer>
 							</dict>
 							<key>files/stacks_page_page52.css</key>
 							<dict>
@@ -5764,8 +5764,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eQdYl9oiHakA
-								NxCieKV0wg==
+								+DgQKb64G4Qj
+								kkdFSWHYNg==
 								</data>
 								<key>Size</key>
 								<integer>49487</integer>
@@ -5781,7 +5781,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-28T18:52:03Z</date>
+						<date>2018-05-29T17:56:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5815,6 +5815,16 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-00705d8-962x550.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								sJ0vKgRi9nmE
+								cTfZNsELYg==
+								</data>
+								<key>Size</key>
+								<integer>220569</integer>
 							</dict>
 							<key>files/stacks-image-20c6353-176x250.png</key>
 							<dict>
@@ -5886,16 +5896,6 @@
 								<key>Size</key>
 								<integer>41169</integer>
 							</dict>
-							<key>files/stacks-image-f9435ca-962x550.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								0p0r8uyAmOgl
-								x3DHEQQQag==
-								</data>
-								<key>Size</key>
-								<integer>221774</integer>
-							</dict>
 							<key>files/stacks-image-f9ee1d8-166x250.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -5950,8 +5950,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SuU86o4pRFSr
-								XHzfkeRJAQ==
+								it7VlZ9q27JI
+								eHW0QWBpRg==
 								</data>
 								<key>Size</key>
 								<integer>47086</integer>
