--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/ChildPages/1-NetSci-2019-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/ChildPages/1-NetSci-2019-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-28T18:52:03Z</date>
+						<date>2018-05-29T17:56:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -68,6 +68,16 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
+							<key>files/stacks-image-62d32bc-962x550.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								sJ0vKgRi9nmE
+								cTfZNsELYg==
+								</data>
+								<key>Size</key>
+								<integer>220569</integer>
+							</dict>
 							<key>files/stacks-image-69ebcea.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -87,16 +97,6 @@
 								</data>
 								<key>Size</key>
 								<integer>228758</integer>
-							</dict>
-							<key>files/stacks-image-f3bb400-962x550.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								0p0r8uyAmOgl
-								x3DHEQQQag==
-								</data>
-								<key>Size</key>
-								<integer>221774</integer>
 							</dict>
 							<key>files/stacks_page_page52.css</key>
 							<dict>
@@ -132,8 +132,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eQdYl9oiHakA
-								NxCieKV0wg==
+								+DgQKb64G4Qj
+								kkdFSWHYNg==
 								</data>
 								<key>Size</key>
 								<integer>49487</integer>
